refactor: Done some architecture improvements.